--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "@types/jquery": "^3.3.29",
     "core-js": "^2.5.4",
+    "ngx-simple-crypt": "^1.0.1",
     "rxjs": "~6.3.3",
     "sweetalert2": "^8.8.7",
     "tslib": "^1.9.0",
