--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "ngx-simple-crypt": "^1.0.1",
     "rxjs": "~6.3.3",
+    "socket.io-client": "^2.2.0",
     "sweetalert2": "^8.8.7",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
